hphp/test/zend/bad/ext/gd/tests/imageloadfont_error1.php
<?php
var_dump( imageloadfont(array()) );
?>